--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -92,7 +92,7 @@
                     <li><a href="{{ site.url }}/java/">자바</a></li>
                     <li><a href="{{ site.url }}/certificate/">자격증</a></li>
                     <li><a href="{{ site.url }}/algo/">알고리즘</a></li>
-                    <li><a href="{{ site.url }}/blog/">Github_Blog</a></li>
+                    <li><a href="{{ site.url }}/Github_Blog/">Github_Blog</a></li>
 					<li><a href="{{ site.url }}/tags/">All Tags</a></li>
 				</ul>
 			</li>
