--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,39 +12,33 @@ layout: compress
 <body>
     {% include nav.html %}
     <!-- Header -->
-    <header class="header flex" role="banner">
-        <div class="container animated fadeIn">
-            <div class="row">
-                    <a href="{{ site.url }}">
-                        <img src="{{ site.logo }}" class="img-circle zoombtn animated rotateIn">
+    <header class="header" role="banner">
+        <div class="wrapper animated fadeIn">
+            <div class="content">
+                <div class="post-title">
+                    <h1>{{ page.title }}</h1>
+                    <a class="btn zoombtn" href="{{site.url}}">
+                        <i class="fa fa-home"></i>
                     </a>
-                    <h3 class="title">
-                        <a class="zoombtn" href="{{ site.url }}">
-                        	<p style="font-size:1.2rem;font-weight:300">{{ site.title }}</p>
-			            </a>
-                    </h3>
-                    <hr class="hr-line">
-                    <h3 class="title">
-                        <a href="{{ site.url }}">
-                        	<p style="font-size:1rem;font-weight:300">{{ site.bio }}</p>
-			            </a>
-                    </h3>
-                    {% include social-links.html %}
-                  <hr class="hr-line">
-                  <h3 class="title">
-                         <a class="btn zoombtn" href="{{ site.url }}/about">
-                         소개
-                         </a>
-                         <a class="btn zoombtn" href="{{ site.url }}/posts">
-                         포스팅
-                         </a>
-                         <a class="btn zoombtn" href="{{ site.url }}/projects">
-                         프로젝트(준비중)
-                         </a>
-                 </h3>
+                </div>
+                <div class="post-list">
+                    {% for post in site.posts %} 
+                        {% if post.project == null %}
+                    <ul>
+                        <li class="wow fadeInLeft" data-wow-duration="1.5s">
+                            <a class="zoombtn" href="{{ site.url }}{{ post.url }}">{{ post.title }}</a>
+                            <p>{{ post.excerpt }}</p>
+                            <a href="{{ site.url }}{{ post.url }}" class="btn zoombtn">더보기</a>
+                        </li>
+                    </ul>
+                        {% endif %}
+                    {% endfor %}
+                </div>
             </div>
         </div>
     </header>
     {% include scripts.html %}
+    <script src="{{ site.url }}/assets/js/wow.min.js"></script>
+    <script type="text/javascript">(new WOW).init();</script>
 </body>
 </html>
