--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -20,6 +20,9 @@ layout: compress
                     <a class="btn zoombtn" href="{{site.url}}">
                         <i class="fa fa-home"></i>
                     </a>
+                    <a href="{{ site.url }}">
+                        <img src="{{ site.logo }}" class="img-circle zoombtn animated rotateIn">
+                    </a>
                 </div>
                 <div class="post-list">
                     {% for post in site.posts %} 
