--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -20,7 +20,9 @@ layout: compress
                     <a class="btn zoombtn" href="{{site.url}}">
                         <i class="fa fa-home"></i>
                     </a>
-                    {% include social-links.html %}
+                    <a class="social-btn" href="/search/">
+                        <i class="fa fa-fw fa-search"></i>
+                    </a>
                 </div>
                 <div class="post-list">
                     {% for post in site.posts %} 
