--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -20,7 +20,7 @@ layout: compress
                     <a class="btn zoombtn" href="{{site.url}}">
                         <i class="fa fa-home"></i>
                     </a>
-                    <a class="social-btn" href="/search/">
+                    <a class="btn zoombtn" href="/search/">
                         <i class="fa fa-fw fa-search"></i>
                     </a>
                 </div>
