--- a/_includes/social-links.html
+++ b/_includes/social-links.html
@@ -1,6 +1,7 @@
-                    <hr class="hr-line">
+<a class="social-btn" href="/search/"><i class="fa fa-fw fa-search"></i></a>
+                    <!--<hr class="hr-line">
                     <h3 class="title" style="font-size:30px;">
-                        <a class="social-btn" href="/search/"><i class="fa fa-fw fa-search"></i></a>
+                        
                         {% if site.email %}<a class="social-btn" href="mailto:{{ site.email }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-envelope-square"></i></a>{% endif %}
                         {% if site.twitter %}<a class="social-btn" href="http://twitter.com/{{ site.twitter }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-twitter-square"></i></a>{% endif %}
                         {% if site.facebook %}<a class="social-btn" href="http://facebook.com/{{ site.facebook }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-facebook-square"></i></a>{% endif %}
@@ -26,4 +27,4 @@
                         {% if site.keybase %}<a class="social-btn" href="https://keybase.io/{{ site.keybase }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-key"></i></a>{% endif %}
                         {% if site.xmpp %}<a class="social-btn" href="xmpp:{{ site.xmpp }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-lightbulb-o"></i></a>{% endif %}
                         {% if site.hackernews %}<a class="social-btn" href="https://news.ycombinator.com/user?id={{ site.hackernews }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-hacker-news"></i></a>{% endif %}
-                  </h3>
+                  </h3>-->
