--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -20,9 +20,7 @@ layout: compress
                     <a class="btn zoombtn" href="{{site.url}}">
                         <i class="fa fa-home"></i>
                     </a>
-                    <a class="btn zoombtn" href="/search/">
-                        <i class="fa fa-fw fa-search"></i>
-                    </a>
+                    {% include social-links.html %}
                 </div>
                 <div class="post-list">
                     {% for post in site.posts %} 
