블로그 개선중 ver 1.1

--- a/_includes/social-links.html
+++ b/_includes/social-links.html
@@ -1,4 +1,4 @@
-<a class="social-btn" href="/search/"><i class="fa fa-fw fa-search"></i></a>
+<a class="btn zoombtn" href="/search/"><i class="fa fa-fw fa-search"></i></a>
                     <!--<hr class="hr-line">
                     <h3 class="title" style="font-size:30px;">
                         
