--- a/_layouts/blog-list.html
+++ b/_layouts/blog-list.html
@@ -20,6 +20,7 @@ layout: compress
                     <a class="btn zoombtn" href="{{site.url}}">
                         <i class="fa fa-home"></i>
                     </a>
+                    {% include social-links.html %}
                 </div>
                 <div class="post-list">
                     {% for post in site.posts %} 
