--- a/_layouts/post-list.html
+++ b/_layouts/post-list.html
@@ -31,6 +31,7 @@ layout: compress
                         <li class="wow fadeInLeft" data-wow-duration="1.5s">
                             <a class="zoombtn" href="{{ site.url }}{{ post.url }}">{{ post.title }}</a>
                             <p>{{ post.excerpt }}</p>
+                            <p>{{ post.date }}</p>
                             <a href="{{ site.url }}{{ post.url }}" class="btn zoombtn">더보기</a>
                         </li>
                     </ul>
