--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -30,7 +30,7 @@ layout: compress
                         <li class="wow fadeInLeft" data-wow-duration="1.5s">
                             <a class="zoombtn" href="{{ site.url }}{{ post.url }}">{{ post.title }}</a>
                             <p>{{ post.excerpt }}</p>
-                            <p>{{ post.tags }}</p>
+                            <p><span style="color:crimson; margin:5px">{{ post.tags }}</span></p>
                             <a href="{{ site.url }}{{ post.url }}" class="btn zoombtn">더보기</a>
                         </li>
                     </ul>
