--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,15 +2,8 @@
 		<!--<button class="dl-trigger">Open Menu</button>-->
 		<ul>
             <li>
-                <a href="#">Posts</a>
-                <ul>
-                    <!--<li><a href="{{ site.url }}/posts/">All Posts</a></li>-->
-                    <li><a href="{{ site.url }}/java/">자바</a></li>
-                    <li><a href="{{ site.url }}/certificate/">자격증</a></li>
-                    <li><a href="{{ site.url }}/algo/">알고리즘</a></li>
-                    <li><a href="{{ site.url }}/Github_Blog/">Github_Blog</a></li>
-                    <li><a href="{{ site.url }}/tags/">All Tags</a></li>
-                </ul>
+                <a href="https://choiwono.github.io/">Home</a>
+                
             </li>
 		</ul><!-- /.dl-menu -->
 	</nav><!-- /.dl-menuwrapper -->
