--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,8 +2,7 @@
 		<!--<button class="dl-trigger">Open Menu</button>-->
 		<ul>
             <li>
-                <a href="https://choiwono.github.io/">Home</a>
-                
+                <a href="{{ site.url }}/">Home</a>
             </li>
 		</ul><!-- /.dl-menu -->
 	</nav><!-- /.dl-menuwrapper -->
