--- a/_sass/nav.scss
+++ b/_sass/nav.scss
@@ -37,7 +37,7 @@
 	button:hover,
 	button.dl-active,
 	ul {
-		background: #fff;
+		background: #aaa;
 	}
 	button:after {
 		content: '';
@@ -360,7 +360,7 @@ All this is done for any sub-level being entered.
 .dl-menuwrapper button:hover,
 .dl-menuwrapper button.dl-active,
 .dl-menuwrapper ul {
-	background: $comp-color;
+	background: $white;
 }
 // Fix for IE
 .dl-menu li {
