--- a/_sass/nav.scss
+++ b/_sass/nav.scss
@@ -55,7 +55,7 @@
 		display: none;
 	}
 	ul {
-		padding: 0;
+		//padding: 0;
 		list-style: none;
 		-webkit-transform-style: preserve-3d;
 		-moz-transform-style: preserve-3d;
