update_blog_UI_2018_12_21
UI NAVBAR 변경중

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -3,6 +3,11 @@
 		<ul>
             <li>
                 <a href="{{ site.url }}/">Home</a>
+                <a href="{{ site.url }}/about">About</a>
+                <a href="{{ site.url }}/posts">About</a>
             </li>
-		</ul><!-- /.dl-menu -->
+        </ul><!-- /.dl-menu -->
+        <ul style="float:right; width:500px;">
+                
+        </ul>    
 	</nav><!-- /.dl-menuwrapper -->
