--- a/_sass/nav.scss
+++ b/_sass/nav.scss
@@ -86,7 +86,7 @@
 		a {
 			display: block;
 			position: relative;
-			padding: 10px 20px;
+			//padding: 10px 20px;
 			@include font-rem(14);
 			line-height: 20px;
 			font-weight: 400;
