--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -8,7 +8,7 @@
                 <a href="{{ site.url }}/about">About</a>
             </li>
             <li>
-                <a href="{{ site.url }}/posts">About</a>
+                <a href="{{ site.url }}/posts">Posts</a>
             </li>
         </ul><!-- /.dl-menu -->
         <ul style="float:right; width:500px;">
