--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,15 +1,19 @@
 	<nav id="dl-menu" class="dl-menuwrapper" role="navigation">
 		<!--<button class="dl-trigger">Open Menu</button>-->
 		<ul>
+            <div>
             <li>
                 <a href="{{ site.url }}/">Home</a>
             </li>
+            </div>
+            <div>
             <li>    
                 <a href="{{ site.url }}/about">About</a>
             </li>
             <li>
                 <a href="{{ site.url }}/posts">Posts</a>
             </li>
+            </div>
         </ul><!-- /.dl-menu -->
         <ul style="float:right; width:500px;">
                 
