--- a/_sass/nav.scss
+++ b/_sass/nav.scss
@@ -56,6 +56,7 @@
 	}
 	ul {
 		//padding: 0;
+		margin:0px;
 		list-style: none;
 		-webkit-transform-style: preserve-3d;
 		-moz-transform-style: preserve-3d;
