--- a/_sass/nav.scss
+++ b/_sass/nav.scss
@@ -64,6 +64,8 @@
 	li {
 		position: relative;
 		float:left;
+		padding:20px;
+		border-right:1px solid #ddd;
 		//width:33%;
 		h4 {
 			margin:0;
