--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,7 +1,7 @@
 	<nav id="dl-menu" class="dl-menuwrapper" role="navigation">
 		<!--<button class="dl-trigger">Open Menu</button>-->
 		<ul>
-            <li">
+            <li style="border-left:1px solid #ddd;">
                 <a href="{{ site.url }}/">Home</a>
             </li>
             <li>    
