--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -7,11 +7,12 @@
             <li>    
                 <a href="{{ site.url }}/about">About</a>
             </li>
-            <li>
-                <a href="{{ site.url }}/posts">Posts</a>
-            </li>
-        </ul><!-- /.dl-menu -->
-        <ul style="float:right; width:500px;">
-                
-        </ul>    
+            <ul>
+                <li><a href="{{ site.url }}/java/">자바</a></li>
+                <li><a href="{{ site.url }}/certificate/">자격증</a></li>
+                <li><a href="{{ site.url }}/algo/">알고리즘</a></li>
+                <li><a href="{{ site.url }}/Github_Blog/">Github_Blog</a></li>
+                <li><a href="{{ site.url }}/tags/">All Tags</a></li>
+            </ul>
+        </ul><!-- /.dl-menu --> 
 	</nav><!-- /.dl-menuwrapper -->
