update_blog_nav
네비게이션 수정중

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -7,12 +7,15 @@
             <li>    
                 <a href="{{ site.url }}/about">About</a>
             </li>
-            <ul>
+            <li>
+                <a href="{{ site.url }}/posts">Posts</a><i class="fa fa-caret-down"></i>
+            </li>
+            <div class="dropdown-content">
                 <li><a href="{{ site.url }}/java/">자바</a></li>
                 <li><a href="{{ site.url }}/certificate/">자격증</a></li>
                 <li><a href="{{ site.url }}/algo/">알고리즘</a></li>
-                <li><a href="{{ site.url }}/Github_Blog/">Github_Blog</a></li>
+                <li><a href="{{ site.url }}/Github_Blog/">ver 1.0</a></li>
                 <li><a href="{{ site.url }}/tags/">All Tags</a></li>
-            </ul>
+            </div>
         </ul><!-- /.dl-menu --> 
 	</nav><!-- /.dl-menuwrapper -->
