--- a/_sass/nav.scss
+++ b/_sass/nav.scss
@@ -54,6 +54,9 @@
 	button.dl-active {
 		display: none;
 	}
+	.dropdown-content {
+		display: none;
+	}
 	ul {
 		//padding: 0;
 		list-style: none;
