--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -7,8 +7,8 @@
             <li>    
                 <a href="{{ site.url }}/about">About</a>
             </li>
-            <li>
-                <a href="{{ site.url }}/posts">Posts</a><i class="fa fa-caret-down"></i>
+            <li id="dropdown-btn">
+                <a href="{{ site.url }}/posts">Posts<i class="fa fa-caret-down"></i></a>
             </li>
             <div class="dropdown-content">
                 <li><a href="{{ site.url }}/java/">자바</a></li>
