--- a/_sass/nav.scss
+++ b/_sass/nav.scss
@@ -59,7 +59,7 @@
 		float:left;
 		overflow:hidden;
 	}
-	#dropdown-btn:hover .dropdown-content{
+	.dropdown-btn:hover .dropdown-content{
 		display: block;
 	}
 	ul {
