--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -7,15 +7,15 @@
             <li>    
                 <a href="{{ site.url }}/about">About</a>
             </li>
-            <li id="dropdown-btn">
-                <a href="{{ site.url }}/posts">Posts<i class="fa fa-caret-down"></i></a>
+            <li class="dropdown-btn">
+                <a href="{{ site.url }}/posts">Posts <i class="fa fa-caret-down"></i></a>    
+                <div class="dropdown-content">
+                    <li><a href="{{ site.url }}/java/">자바</a></li>
+                    <li><a href="{{ site.url }}/certificate/">자격증</a></li>
+                    <li><a href="{{ site.url }}/algo/">알고리즘</a></li>
+                    <li><a href="{{ site.url }}/Github_Blog/">ver 1.0</a></li>
+                    <li><a href="{{ site.url }}/tags/">All Tags</a></li>
+                </div>
             </li>
-            <div class="dropdown-content">
-                <li><a href="{{ site.url }}/java/">자바</a></li>
-                <li><a href="{{ site.url }}/certificate/">자격증</a></li>
-                <li><a href="{{ site.url }}/algo/">알고리즘</a></li>
-                <li><a href="{{ site.url }}/Github_Blog/">ver 1.0</a></li>
-                <li><a href="{{ site.url }}/tags/">All Tags</a></li>
-            </div>
         </ul><!-- /.dl-menu --> 
 	</nav><!-- /.dl-menuwrapper -->
