--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -13,7 +13,7 @@
                     <li><a href="{{ site.url }}/java/">자바</a></li>
                     <li><a href="{{ site.url }}/certificate/">자격증</a></li>
                     <li><a href="{{ site.url }}/algo/">알고리즘</a></li>
-                    <li><a href="{{ site.url }}/Github_Blog/">ver 1.0</a></li>
+                    <li><a href="{{ site.url }}/Github_Blog/">블로그개선</a></li>
                     <li><a href="{{ site.url }}/tags/">All Tags</a></li>
                 </div>
             </li>
