--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -8,13 +8,13 @@
                 <a href="{{ site.url }}/about">About</a>
             </li>
             <li class="dropdown-btn">
-                <a href="{{ site.url }}/posts">Posts <i class="fa fa-caret-down"></i></a>    
+                <a href="{{ site.url }}/posts">Posts<i class="fa fa-caret-down"></i></a>
                 <div class="dropdown-content">
-                    <li><a href="{{ site.url }}/java/">자바</a></li>
-                    <li><a href="{{ site.url }}/certificate/">자격증</a></li>
-                    <li><a href="{{ site.url }}/algo/">알고리즘</a></li>
-                    <li><a href="{{ site.url }}/Github_Blog/">블로그개선</a></li>
-                    <li><a href="{{ site.url }}/tags/">All Tags</a></li>
+                        <li><a href="{{ site.url }}/java/">자바</a></li>
+                        <li><a href="{{ site.url }}/certificate/">자격증</a></li>
+                        <li><a href="{{ site.url }}/algo/">알고리즘</a></li>
+                        <li><a href="{{ site.url }}/Github_Blog/">ver 1.0</a></li>
+                        <li><a href="{{ site.url }}/tags/">All Tags</a></li>
                 </div>
             </li>
         </ul><!-- /.dl-menu --> 
