--- a/_sass/nav.scss
+++ b/_sass/nav.scss
@@ -60,7 +60,9 @@
 		overflow:hidden;
 		position:absolute;
 		background-color: #f9f9f9;
-  		min-width: 160px;
+		min-width: 83px;
+		border-right:none;
+		border-bottom:1px solid #ddd;
   		box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   		padding: 12px 16px;
   		z-index: 1;
