--- a/_sass/nav.scss
+++ b/_sass/nav.scss
@@ -61,11 +61,15 @@
 		position:absolute;
 		background-color: #f9f9f9;
 		min-width: 83px;
-		border-right:none;
-		border-bottom:1px solid #ddd;
   		box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   		padding: 12px 16px;
-  		z-index: 1;
+		z-index: 1;
+		top:60px;
+		left:0px;
+	}
+	.dropdown-content li {
+		border-right:none;
+		border-bottom:1px solid #ddd;
 	}
 	.dropdown-btn:hover .dropdown-content{
 		display: block;
