--- a/_sass/nav.scss
+++ b/_sass/nav.scss
@@ -55,7 +55,7 @@
 		display: none;
 	}
 	.dropdown-content {
-		display: none;
+		//display: none;
 		float:left;
 		overflow:hidden;
 		position:absolute;
