--- a/_sass/nav.scss
+++ b/_sass/nav.scss
@@ -55,15 +55,15 @@
 		display: none;
 	}
 	.dropdown-content {
-		//display: none;
+		display: none;
 		float:left;
 		overflow:hidden;
 		position:absolute;
 		background-color: #f9f9f9;
 		min-width: 83px;
   		box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  		padding: 12px 16px;
 		z-index: 1;
+		font-size:12px;
 		top:60px;
 		left:0px;
 	}
