--- a/_sass/nav.scss
+++ b/_sass/nav.scss
@@ -59,13 +59,14 @@
 		float:left;
 		overflow:hidden;
 		position:absolute;
-		background-color: #f9f9f9;
+		background-color: #fff;
 		min-width: 83px;
   		box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 		z-index: 1;
 		font-size:12px;
 		top:60px;
 		left:0px;
+		padding:0px;
 	}
 	.dropdown-content li {
 		border-right:none;
