--- a/_sass/nav.scss
+++ b/_sass/nav.scss
@@ -60,17 +60,19 @@
 		overflow:hidden;
 		position:absolute;
 		background-color: #fff;
-		min-width: 83px;
   		box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 		z-index: 1;
-		font-size:12px;
 		top:60px;
 		left:0px;
 		padding:0px;
 	}
 	.dropdown-content li {
+		min-width:83px;
 		border-right:none;
 		border-bottom:1px solid #ddd;
+	}
+	.dropdown-content li a {
+		font-size:10px;
 	}
 	.dropdown-btn:hover .dropdown-content{
 		display: block;
