--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -17,5 +17,29 @@
                     <li><a href="{{ site.url }}/tags/">All Tags</a></li>
                 </ul>
             </li>
+            <div id="results">
+                <h1><!-- `key` listing for `value` --></h1>
+            
+                <ul class="results">
+                <!-- results lists -->
+                </ul>
+            </div>
+            <div id="search-container">
+            <input type="text" id="search-input" placeholder="search...">
+            <ul id="results-container"></ul>
+            </div>
         </ul><!-- /.dl-menu --> 
 	</nav><!-- /.dl-menuwrapper -->
+    <script src="{{site.baseurl}}/dest/jekyll-search.js" type="text/javascript"></script>
+    <script type="text/javascript">
+        SimpleJekyllSearch({
+            searchInput: document.getElementById('search-input'),
+            resultsContainer: document.getElementById('results-container'),
+            json: '{{ site.baseurl }}/search2.json',
+            searchResultTemplate: '<li><a href="{url}" title="{desc}">{title}</a></li>',
+            noResultsText: 'No results found',
+            limit: 10,
+            fuzzy: false,
+            exclude: ['Welcome']
+        })
+    </script>
