--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -15,19 +15,17 @@
                     <li><a href="{{ site.url }}/algo/">알고리즘</a></li>
                     <!--<li><a href="{{ site.url }}/Github_Blog/">ver 1.0</a></li>-->
                     <li><a href="{{ site.url }}/tags/">All Tags</a></li>
+                    <li><input type="text" id="search-input" placeholder="search...">
+                    <ul id="results-container"></ul>
+                    </li>
                 </ul>
             </li>
-            <div id="results">
-                <h1><!-- `key` listing for `value` --></h1>
-            
+            <!--<div id="results">
+                <h1></h1>
                 <ul class="results">
-                <!-- results lists -->
                 </ul>
-            </div>
-            <div id="search-container">
-            <input type="text" id="search-input" placeholder="search...">
-            <ul id="results-container"></ul>
-            </div>
+            </div>-->
+            
         </ul><!-- /.dl-menu --> 
 	</nav><!-- /.dl-menuwrapper -->
     <script src="{{site.baseurl}}/dest/jekyll-search.js" type="text/javascript"></script>
