--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -17,7 +17,7 @@
                     <li><a href="{{ site.url }}/tags/">All Tags</a></li>
                 </ul>
             </li>
-            <li><input type="text" id="search-input" placeholder="search...">
+            <li id="search-bar"><input type="text" id="search-input" placeholder="search...">
                 <ul id="results-container"></ul>
             </li>
             <!--<div id="results">
