--- a/_sass/nav.scss
+++ b/_sass/nav.scss
@@ -1,3 +1,16 @@
+#search-bar {
+	float:right;
+}
+#search-bar > input {
+	margin: 0;
+    width: 115px;
+    height: 33px;
+    border-radius: 17px;
+    border: 1px solid #e6e6e6;
+    padding: 0 30px 0 15px;
+    font-size: 14px;
+    color: #505050;
+}
 .dl-menuwrapper {
 	width: 100%;
 	//position: absolute;
