--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -34,7 +34,7 @@
             searchInput: document.getElementById('search-input'),
             resultsContainer: document.getElementById('results-container'),
             json: '{{ site.baseurl }}/search2.json',
-            searchResultTemplate: '<li class="search-li"><a href="{url}" title="{desc}">{title}</a></li>',
+            searchResultTemplate: '<li class="search-li" style="padding:10px;"><a href="{url}" title="{desc}">{title}</a></li>',
             noResultsText: 'No results found',
             limit: 10,
             fuzzy: false,
