--- a/_sass/nav.scss
+++ b/_sass/nav.scss
@@ -8,9 +8,7 @@
 }
 .search-li {
 	background: #fff;
-    border-radius: 17px;
     border: 1px solid #e6e6e6;
-    padding: 10px;
     white-space: nowrap;
     overflow: hidden;
     width: 170px;
@@ -26,6 +24,11 @@
     padding: 0 30px 0 15px;
     font-size: 14px;
     color: #505050;
+}
+#result-container {
+	position: absolute;
+	padding-left: 0px;
+	background:none;
 }
 .dl-menuwrapper {
 	width: 100%;
