--- a/_sass/nav.scss
+++ b/_sass/nav.scss
@@ -25,7 +25,7 @@
     font-size: 14px;
     color: #505050;
 }
-#result-container {
+#results-container {
 	position: absolute;
 	padding-left: 0px;
 	background:none;
