#4 site.scss 수정완료

--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -17,7 +17,7 @@ body {
 	@include font-rem($doc-font-size);
 	color: $color_tuatara;
 	background-color:#f8f9fa;
-	background-color: $bodycolor;
+	//background-color: $bodycolor;
 	background-position: center center;
 	background-attachment: fixed;
 	@media #{$small} {
