--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@ layout: compress
 <head>
     {% include head.html %}
 </head>
-<body>
+<body style="background-color:#f8f9fa;">
     <header class="header" role="banner">
     {% include nav.html %}
     </header>
