--- a/_sass/nav.scss
+++ b/_sass/nav.scss
@@ -94,22 +94,21 @@
 		background-color: #495057;
 		  //box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 		border-radius:5px;
-		color:#fff;
 		z-index: 1;
 		top:60px;
 		left:0px;
-		padding:0px;
+		padding:10px 0px;
+		opacity: 0;
+		pointer-events: none;
+		transition: all .5s ease-in-out;
 	}
 	.dropdown-content li {
 		text-align:center;
 		min-width:85px;
 		border-right:none;
-		border-bottom:1px solid #ddd;
 		border-radius:5px;
 		font-weight:700;
-	}
-	.dropdown-content li:first-child {
-		border-top:1px solid #ddd;
+		color:#fff;
 	}
 	.dropdown-content li a {
 		font-size:10px;
