--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -42,20 +42,25 @@ h3.title a {
     text-align: left;
 	ul {
 		list-style: none;
-		padding-left: 0;
+		padding:5px;
 		box-shadow: 1px 1px 1px 1px #aaaaaa;
+		top:0px;
+		width:30%;
+		display:inline-flex;
+		margin:10px 5px 5px 5px;
 	}
 	li {
 		padding: 10px 18px;
-		margin: 0 10px;
+		//margin: 0 10px;
 		text-decoration: none;
 		background: $white;
 		color: $color_shark;
 		a {
-			@include font-rem(20);
+			//@include font-rem(20);
 			text-decoration: none;
 			color: $color_shark;
 			font-weight: bolder;
+			font-size:1.1rem;
             &:hover {
                 color: $red;
             }
