--- a/_layouts/post-list.html
+++ b/_layouts/post-list.html
@@ -28,7 +28,10 @@ layout: compress
                     {% for post in site.posts %} 
                         {% if post.project == null %}
                     <ul>
-                        <li class="wow fadeInLeft" data-wow-duration="1.5s">
+                        <li class="wow fadeInLeft">
+                            <div>
+                                <img src="#" style="height:33%; width:100%;"/>
+                            </div>
                             <a class="zoombtn" href="{{ site.url }}{{ post.url }}">{{ post.title }}</a>
                             <p>{{ post.excerpt }}</p>
                             <a href="{{ site.url }}{{ post.url }}" class="btn zoombtn">더보기</a>
