--- a/_layouts/post-list.html
+++ b/_layouts/post-list.html
@@ -30,7 +30,7 @@ layout: compress
                     <ul>
                         <li class="wow fadeInLeft">
                             <div>
-                                <img src="#" style="height:33%; width:100%;"/>
+                                <img src="https://coverfiles.alphacoders.com/443/44333.jpg" style="height:100px; width:100%;"/>
                             </div>
                             <a class="zoombtn" href="{{ site.url }}{{ post.url }}">{{ post.title }}</a>
                             <p>{{ post.excerpt }}</p>
