#19.01.04 post-list 수정완료!!

--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -43,13 +43,13 @@ h3.title a {
 	ul {
 		list-style: none;
 		padding:5px;
-		box-shadow: 1px 1px 1px 1px #aaaaaa;
+		box-shadow: 0 0 10px #e0e0e0;
+		border: 1px solid #e0e0e0;
 		top:0px;
 		width:31%;
 		display:inline-flex;
 		margin:10px 5px 5px 5px;
 		height:300px;
-
 	}
 	li {
 		padding: 10px 18px;
