--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -41,6 +41,12 @@ h3.title a {
 .post-list {
     text-align: left;
 	ul {
+		@media screen and (max-width: 900px) {
+			width : 46.5%;
+		}
+		@media screen and (max-width: 670px) {
+			width : 98%;
+		}  
 		list-style: none;
 		padding:5px;
 		box-shadow: 0 0 10px #e0e0e0;
@@ -49,10 +55,9 @@ h3.title a {
 		width:31%;
 		display:inline-flex;
 		margin:10px 5px 5px 5px;
-		height:300px;
 	}
 	li {
-		padding: 10px 18px;
+		padding: 10px 5px;
 		//margin: 0 10px;
 		text-decoration: none;
 		background: $white;
