#19.01.07 블로그 ui 수정완료

--- a/_layouts/post-list.html
+++ b/_layouts/post-list.html
@@ -32,6 +32,7 @@ layout: compress
                             <img src="https://coverfiles.alphacoders.com/443/44333.jpg" style="height:100px; width:100%;"/>
                         </li>-->
                         <li>
+                            <span class="post-meta"></span>
                             <a class="zoombtn" href="{{ site.url }}{{ post.url }}">{{ post.title }}</a>
                             <p>{{ post.excerpt }}</p>
                             <a href="{{ site.url }}{{ post.url }}" class="btn zoombtn">더보기</a>
