#3 [19.01.11] li > a 컬러 수정

--- a/_sass/nav.scss
+++ b/_sass/nav.scss
@@ -31,6 +31,9 @@
 	padding-left: 0px;
 	background:none;
 }
+.dropdown-content > li > a {
+	color:white;
+}
 .dl-menuwrapper {
 	width: 100%;
 	//position: absolute;
