--- a/_sass/elements.scss
+++ b/_sass/elements.scss
@@ -86,24 +86,25 @@
 hr {
   border: 0;
   border-bottom:1px dashed #ccc;
-  background-image:#999;
-  }
-&.hr-line {
-  border: 0;
-  height: 1px;
-  opacity: .15;
+	height: 1px;
   margin: 1em 0;
-  background-image: -webkit-linear-gradient(left, $color_gallery, $color_stack, $color_gallery);
-  background-image: -moz-linear-gradient(left, $color_gallery, $color_stack, $color_gallery);
-  background-image: -ms-linear-gradient(left, $color_gallery, $color_stack, $color_gallery);
-  background-image: -o-linear-gradient(left, $color_gallery, $color_stack, $color_gallery);
+	background: #999;
+	&.hr-line {
+		border: 0;
+		height: 1px;
+		opacity: .15;
+		margin: 1em 0;
+		background-image: -webkit-linear-gradient(left, $color_gallery, $color_stack, $color_gallery);
+		background-image: -moz-linear-gradient(left, $color_gallery, $color_stack, $color_gallery);
+		background-image: -ms-linear-gradient(left, $color_gallery, $color_stack, $color_gallery);
+		background-image: -o-linear-gradient(left, $color_gallery, $color_stack, $color_gallery);
+	}
 }
-
 
 // images and figures
 img {
     display: block;
-	  max-width: 100%;
+	max-width: 100%;
     width: auto;
     height: auto;
     vertical-align: middle;
