--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -20,14 +20,9 @@
             <li id="search-bar"><input type="text" id="search-input" placeholder="search...">
                 <ul id="results-container"></ul>
             </li>
-            <!--<div id="results">
-                <h1></h1>
-                <ul class="results">
-                </ul>
-            </div>-->
-            
-        </ul><!-- /.dl-menu --> 
-	</nav><!-- /.dl-menuwrapper -->
+        </ul>
+    </nav>
+    
     <script src="{{site.baseurl}}/dest/jekyll-search.js" type="text/javascript"></script>
     <script type="text/javascript">
         SimpleJekyllSearch({
