--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -20,9 +20,14 @@
             <li id="search-bar"><input type="text" id="search-input" placeholder="search...">
                 <ul id="results-container"></ul>
             </li>
-        </ul>
-    </nav>
-    
+            <!--<div id="results">
+                <h1></h1>
+                <ul class="results">
+                </ul>
+            </div>-->
+            
+        </ul><!-- /.dl-menu --> 
+	</nav><!-- /.dl-menuwrapper -->
     <script src="{{site.baseurl}}/dest/jekyll-search.js" type="text/javascript"></script>
     <script type="text/javascript">
         SimpleJekyllSearch({
