--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -7,18 +7,12 @@
   <div class="sidebar-item">
     <div class="sidebar-personal-info">
       <div class="sidebar-personal-info-section">
-        <!-- <a href="http://gravatar.com/{{ site.author.gravatar }}"> -->
           <a href="http://gravatar.com/"></a>
-          <!-- <img src="http://www.gravatar.com/avatar/{{ site.author.gravatar }}?s=350" title="View on Gravatar" alt="View on Gravatar" /> -->
-          <!-- <img src="https://s.gravatar.com/avatar/fedd0cb9bf32323502b502a383136608?s=80" title="View on Gravatar" alt="View on Gravatar" style="margin:auto;" /> -->
           <img src="https://s.gravatar.com/avatar/fedd0cb9bf32323502b502a383136608?s=80" title="View on Gravatar" alt="View on Gravatar" style="margin:auto;" />
-          
-
-          
         </a>
       </div>
       <div class="sidebar-personal-info-section" >
-        <p>개발자가 되고픈 사람. <br> 제대로 노력해서 1보를 이루자</p>
+        <p>주니어 개발자 취업중, 계속 발전하자</p>
       </div>
       {% if site.author.contact %}
       {% assign len = site.author.contact | size %}
