--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
             <!-- <a href="{{ site.baseurl }}/" title="Home" title="{{ site.title }}">
               <img class="masthead-logo" src="{{ site.baseurl }}{{ site.logo }}"/>
             </a> -->
-            <small>개발자가 되고 싶은 사람</small>
+            <small>큰일일수록 작게 시작하자</small>
           </h3>
         </div>
       </div>
