--- a/_scss/_config.scss
+++ b/_scss/_config.scss
@@ -20,7 +20,7 @@ $theme-color-dark: darken($theme-color, 10%);
 
 $post-date-color: #9a9a9a;
 $title-color: #313131;
-$masthead-title-small-color: #c0c0c0;
+$masthead-title-small-color:#fff;
 
 /* Layout */
 $reverse-layout: true;
