--- a/_scss/component/_sidebar.scss
+++ b/_scss/component/_sidebar.scss
@@ -113,7 +113,7 @@ a.sidebar-nav-item:focus {
   }
   display: block;
   padding: .25rem .75rem;
-  color: $theme-color;
+  color: #fff;
   background-color: $white;
   border-radius: .25rem;
   cursor: pointer;
