# default 양식 변경, css 변경

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
             <!-- <a href="{{ site.baseurl }}/" title="Home" title="{{ site.title }}">
               <img class="masthead-logo" src="{{ site.baseurl }}{{ site.logo }}"/>
             </a> -->
-            <small>큰일일수록 작게 시작하자</small>
+            <small><a href="http://choiwono.github.io" target="_top">큰일일수록 작게 시작하자</a></small>
           </h3>
         </div>
       </div>
