# 금일 업로드

--- a/_scss/component/_masthead.scss
+++ b/_scss/component/_masthead.scss
@@ -9,7 +9,7 @@
   padding-bottom: 1rem;
   margin-bottom: 3rem;
   border-bottom: 1px solid $lightgrey;
-  background-color: rgba(217, 32, 32, 0.75);
+  background-color: #ff9b51;
   @media (min-width: 30rem) {
     position: fixed;
     width: 100%;
